# docs/donation_docs.go
@@ -1,1 +1,9 @@
 package docs
+
+// swagger:route GET /donation/donation Donation ListDonation
+// You receive an list of donation events
+// responses:
+//   200: donationListResponse
+//   500: genericResponse
+
+/////////////////////////////////////////////////
